Updated Showcase and made IconLink component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,12 +26,24 @@ body {
   color: var(--foreground);
 }
 
-p {
-  font-family: 'Inter', sans-serif;
-  color: rgb(67, 67, 67);
-}
-
-h2 {
+.h2-default {
+  font-size: 2.25rem;
+  margin-top: calc(var(--spacing) * 3);
+  font-weight: 700;
   font-family: 'Inter', sans-serif;
   color: black;
+}
+
+.h3-default {
+  font-size: 1.5rem;
+  margin-top: calc(var(--spacing) * 3);
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  color: black;
+}
+
+.p-default {
+  font-family: 'Inter', sans-serif;
+  color: rgb(54, 54, 54);
+  font-size: 1rem;
 }
