--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,13 @@ body {
   color: black;
 }
 
+.h2-no-colour {
+  font-size: 2.25rem;
+  margin-top: calc(var(--spacing) * 3);
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+}
+
 .h3-default {
   font-size: 1.5rem;
   margin-top: calc(var(--spacing) * 3);
@@ -42,8 +49,20 @@ body {
   color: black;
 }
 
+.h3-no-colour {
+  font-size: 1.5rem;
+  margin-top: calc(var(--spacing) * 3);
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+}
+
 .p-default {
   font-family: 'Inter', sans-serif;
   color: rgb(54, 54, 54);
+  font-size: 1rem;
+}
+
+.p-no-colour {
+  font-family: 'Inter', sans-serif;
   font-size: 1rem;
 }
