--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ body {
   margin-top: calc(var(--spacing) * 3);
   font-weight: 700;
   font-family: 'Inter', sans-serif;
-  color: black;
+  color: rgb(0, 0, 20);
 }
 
 .h2-no-colour {
@@ -46,7 +46,7 @@ body {
   margin-top: calc(var(--spacing) * 3);
   font-weight: 700;
   font-family: 'Inter', sans-serif;
-  color: black;
+  color: rgb(0, 0, 20);
 }
 
 .h3-no-colour {
