--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,14 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ededed;
 }
 
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #ffffff;
-    --foreground: #ededed;
+    --foreground: #000000;
   }
 }
 
@@ -20,94 +20,108 @@
   font-style: normal;
 }
 
-@theme {
-  --animate-float: float 3s ease-in-out infinite;
-  @keyframes float {
-    0% {
-      transform: translateY(0.5rem)
-    }
-    50% {
-      transform: translateY(-0.5rem)
-    }
-    100% {
-      transform: translateY(0.5rem)
-    }
+@media (min-width: 768px) {
+  .edge {
+    padding-left: calc(var(--spacing) * 40);
+    padding-right: calc(var(--spacing) * 40);
+  }
+  
+  body {
+    background: var(--background);
+    color: var(--foreground);
+  }
+  
+  .h2-default {
+    font-size: 2.25rem;
+    margin-top: calc(var(--spacing) * 3);
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+    color: rgb(0, 0, 40);
+  }
+  
+  .h2-no-colour {
+    font-size: 2.25rem;
+    margin-top: calc(var(--spacing) * 3);
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+  }
+  
+  .h3-default {
+    font-size: 1.5rem;
+    margin-top: calc(var(--spacing) * 3);
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+    color: rgb(0, 0, 40);
+  }
+  
+  .h3-no-colour {
+    font-size: 1.5rem;
+    margin-top: calc(var(--spacing) * 3);
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+  }
+  
+  .p-default {
+    font-family: 'Inter', sans-serif;
+    color: rgb(30, 30, 30);
+    font-size: 1rem;
+  }
+  
+  .p-no-colour {
+    font-family: 'Inter', sans-serif;
+    font-size: 1rem;
   }
 }
 
-@theme {
-  --animate-fade-out: fade-out 0.3s ease-in-out;
-  @keyframes fade-out {
-    0% {
-      filter: brightness(100%);
-      opacity: 100%;
-    }
-    50% {
-    }
-    100% {
-      transform: translateX(2.25rem) translateY(-1.75rem) rotate(4deg);
-      filter: brightness(50%);
-      opacity: 0%;
-    }
+@media (max-width: 767px) {
+  .edge {
+    padding-left: calc(var(--spacing) * 5);
+    padding-right: calc(var(--spacing) * 5);
   }
-}
-
-@theme {
-  --animate-slide-in: slide-in 0.3s ease-in-out;
-  @keyframes slide-in {
-    0% {
-    }
-    50% {
-    }
-    100% {
-      transform: translateX(-2.25rem) translateY(1.75rem) rotate(-4deg);
-      filter: brightness(100%);
-    }
+  
+  body {
+    background: var(--background);
+    color: var(--foreground);
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-}
-
-.h2-default {
-  font-size: 2.25rem;
-  margin-top: calc(var(--spacing) * 3);
-  font-weight: 700;
-  font-family: 'Inter', sans-serif;
-  color: rgb(0, 0, 40);
-}
-
-.h2-no-colour {
-  font-size: 2.25rem;
-  margin-top: calc(var(--spacing) * 3);
-  font-weight: 700;
-  font-family: 'Inter', sans-serif;
-}
-
-.h3-default {
-  font-size: 1.5rem;
-  margin-top: calc(var(--spacing) * 3);
-  font-weight: 700;
-  font-family: 'Inter', sans-serif;
-  color: rgb(0, 0, 40);
-}
-
-.h3-no-colour {
-  font-size: 1.5rem;
-  margin-top: calc(var(--spacing) * 3);
-  font-weight: 700;
-  font-family: 'Inter', sans-serif;
-}
-
-.p-default {
-  font-family: 'Inter', sans-serif;
-  color: rgb(30, 30, 30);
-  font-size: 1rem;
-}
-
-.p-no-colour {
-  font-family: 'Inter', sans-serif;
-  font-size: 1rem;
+  
+  .h2-default {
+    font-size: 2.25rem;
+    margin-top: calc(var(--spacing) * 3);
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+    color: rgb(0, 0, 40);
+  }
+  
+  .h2-no-colour {
+    font-size: 2.25rem;
+    margin-top: calc(var(--spacing) * 3);
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+  }
+  
+  .h3-default {
+    font-size: 1.5rem;
+    margin-top: calc(var(--spacing) * 3);
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+    color: rgb(0, 0, 40);
+  }
+  
+  .h3-no-colour {
+    font-size: 1.5rem;
+    margin-top: calc(var(--spacing) * 3);
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+  }
+  
+  .p-default {
+    font-family: 'Inter', sans-serif;
+    color: rgb(30, 30, 30);
+    font-size: 1rem;
+  }
+  
+  .p-no-colour {
+    font-family: 'Inter', sans-serif;
+    font-size: 1rem;
+  }
 }
